third_party/move/move-compiler-v2/tests/visibility-checker/cross_module_enum_access_02.exp

Diagnostics:
error: Invalid operation: variant test on `m::Wrapper` can only be done within module `0xc0ffee::m`
   ┌─ tests/visibility-checker/cross_module_enum_access_02.move:15:9
   │
15 │     fun test() {
   │         ^^^^
16 │         let x = m::make(22);
17 │         assert!(x is m::Wrapper::V1, 1);
   │                 ------------------- variant test here
